test/corpus/match.txt
==================
match expression with enum patterns and wildcard
==================

fn name(c: Color): i32 {
  return match c {
    .Red => 1,
    _ => 0,
  };
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_identifier)))
    (primitive_type)
    (block
      (return_statement
        (match_expression
          (identifier)
          (match_arm
            (match_pattern
              (enum_literal
                (identifier)))
            (number_literal))
          (match_arm
            (number_literal)))))))

==================
match with payload bindings
==================

fn f(v: Value): i32 {
  return match v {
    .Nil => 0,
    .Int(n) => n as i32,
    .Str(s) => s.len as i32,
  };
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_identifier)))
    (primitive_type)
    (block
      (return_statement
        (match_expression
          (identifier)
          (match_arm
            (match_pattern
              (enum_literal
                (identifier)))
            (number_literal))
          (match_arm
            (match_pattern
              (enum_literal
                (identifier)
                (identifier)))
            (cast_expression
              (identifier)
              (primitive_type)))
          (match_arm
            (match_pattern
              (enum_literal
                (identifier)
                (identifier)))
            (cast_expression
              (field_expression
                (identifier)
                (identifier))
              (primitive_type))))))))

==================
match with or-patterns
==================

fn f(x: i32): i32 {
  return match x {
    1, 2, 3 => 10,
    _ => 0,
  };
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (return_statement
        (match_expression
          (identifier)
          (match_arm
            (match_pattern
              (number_literal))
            (match_pattern
              (number_literal))
            (match_pattern
              (number_literal))
            (number_literal))
          (match_arm
            (number_literal)))))))

==================
match with range patterns
==================

fn f(x: i32): i32 {
  return match x {
    0 ... 9 => 1,
    10 ... 99 => 2,
    _ => 3,
  };
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (primitive_type)))
    (primitive_type)
    (block
      (return_statement
        (match_expression
          (identifier)
          (match_arm
            (match_pattern
              (number_literal)
              (number_literal))
            (number_literal))
          (match_arm
            (match_pattern
              (number_literal)
              (number_literal))
            (number_literal))
          (match_arm
            (number_literal)))))))

==================
match with block arms
==================

fn f(x: i32) {
  match x {
    1 => {
      g();
    }
    _ => {}
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (primitive_type)))
    (block
      (expression_statement
        (match_expression
          (identifier)
          (match_arm
            (match_pattern
              (number_literal))
            (block
              (expression_statement
                (call_expression
                  (identifier)
                  (argument_list)))))
          (match_arm
            (block)))))))
